--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@
 LOCAL_DEPLOYMENT = TRUE 
 
 DATABASE_URL="postgresql://postgres:password@localhost:5432/nakhoda"
+
+NODE_TLS_REJECT_UNAUTHORIZED=0
+PROXY_HOST=
+PROXY_PORT=
+PROXY_USERNAME=
+PROXY_PASSWORD=
