--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "gtfs-realtime-bindings": "^1.1.1",
     "hono": "^4.6.19",
+    "http-proxy-agent": "^7.0.2",
+    "http-proxy-middleware": "^3.0.3",
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/http-proxy-agent": "^4.0.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
