feat: seeder, orm, sample data

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,9 @@
-# This is a boolean value that tells the application that it is running locally
-# To be used to determine either to use Edge Runtime or not
-# Not currently being used
-LOCAL_DEPLOYMENT = TRUE 
-
 DATABASE_URL="postgresql://postgres:password@localhost:5432/nakhoda"
 
-NODE_TLS_REJECT_UNAUTHORIZED=0
 PROXY_HOST=
 PROXY_PORT=
 PROXY_USERNAME=
 PROXY_PASSWORD=
+
+DISCORD_LOGS_BOT=
+DISCORD_ERROR_BOT=
