--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "nakhoda-fetcher",
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "npx tsx prisma/seed.ts ",
+    "seed:reset": "npx prisma migrate reset -f && npx tsx prisma/seed.ts ",
+    "migrate": "npx prisma migrate dev",
+    "generate": "npx prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^6.3.1",
     "axios": "^1.7.9",
     "gtfs-realtime-bindings": "^1.1.1",
     "hono": "^4.6.19",
@@ -18,11 +24,13 @@
   },
   "devDependencies": {
     "@types/http-proxy-agent": "^4.0.1",
-    "@types/node": "18.11.18",
+    "@types/node": "^18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "install": "^0.13.0",
-    "prisma": "^6.3.0",
-    "typescript": "^5"
+    "prisma": "^6.3.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   }
 }
