--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,10 @@ services:
   hono-app:
     build: .
     command: ["sh", "-c", "crond && npm run start"]
+    ports:
+      - "3001:3000"
     env_file:
       - .env
-    network_mode: "host" 
+    network_mode: "host"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
