--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,9 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     volumes:
-      - ./logs:/app/logs
+      - ./logs:/app/logs:rw
     networks:
       - nakhoda-network
-    depends_on:
-      - postgis
 
 networks:
   nakhoda-network:
