--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,7 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     volumes:
-      - type: bind
-        source: ./logs
-        target: /app/logs
-        bind:
-          create_host_path: true
+      - ./logs:/app/logs
     networks:
       - nakhoda-network
 
