feat: seperate proxy

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 DATABASE_URL="postgresql://postgres:password@localhost:5432/nakhoda"
 
-PROXY_HOST=
-PROXY_PORT=
-PROXY_USERNAME=
-PROXY_PASSWORD=
+# Proxy Configuration
+WEBSHARE_API_TOKEN=your_webshare_api_token
+PROXY_USERNAME=your_proxy_username
+PROXY_PASSWORD=your_proxy_password
 
 DISCORD_LOGS_BOT=
 DISCORD_ERROR_BOT=
+DISCORD_PROXY_BOT=
